chore(reflection-util): update to bypass module restrictions